api: feat(core): add current "user" and "database" to cluster status
